kubernetes/apps/database/emqx/cluster/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: emqx-dashboard
spec:
  parentRefs:
    - name: internal
      kind: Gateway
      namespace: network
      sectionName: https
  hostnames:
    - emqx.${SECRET_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: emqx-dashboard
          port: 18083
